@@ -1365,21 +1365,6 @@ public interface ClientProtocol {
       throws IOException;
   
   /**
-   * Delete a snapshot
-   * @param snapshotName name of the snapshot to be deleted
-   * @param snapshotRoot the path where the snapshot exists
-   */
-  public void deleteSnapshot(String snapshotName, String snapshotRoot)
-      throws IOException;
-
-  /**
-   * List snapshots of one directory
-   * @param snapshotRoot the path where the snapshot exists
-   */
-  public SnapshotInfo[] listSnapshots(String snapshotRoot)
-      throws IOException;
-
-  /**
    * Allow snapshot on a directory.
    * @param snapshotRoot the directory to be snapped
    * @throws IOException
